translation-tool/inputs/source_meta/objects/Account_Invoice_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Invoice Identifiers</relationshipLabel>
        <relationshipName>Account_Invoice_Identifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSS_Staging_DB_ID__c</fullName>
        <externalId>true</externalId>
        <label>DSS Staging DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Leasing_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Leasing Company</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Invoice Identifier</label>
    <nameField>
        <label>Account Invoice Identifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Invoice Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>